hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_darray.php.exp
File "disallow_hetergeneous_inputs_for_darray.php", line 4, characters 30-30:
A closing square bracket (']') is expected here. (Parsing[1002])
File "disallow_hetergeneous_inputs_for_darray.php", line 4, characters 30-31:
Unbound name: => (a global constant) (Naming[2049])
